# neocrystal

./: .gitignore  Cargo.toml  LICENSE  README.md  log.txt
src/: main.rs
src/modules/: audio.rs  compat.rs  crystal_manager.rs  curses.rs  dbus.rs  general.rs  mod.rs  mouse.rs  presence.rs  songs.rs  subtitle.rs  tui_borrow.rs  tui_ir.rs  utils.rs
