[package]
name = "neocrystal"
version = "1.5.0"
edition = "2024"

[features]
default = ["rpc"]

rpc = ["discord-presence"]
mouse = []
dev = []

[dependencies]
discord-presence = { version = "3.0.0", optional = true }
glob = "0.3.3"
mp3-duration = "0.1.10"
rand = "0.9.2"
rodio = "0.21.1"
id3 = "1.16.3"
home = "0.5"
unicode-width = "0.2.2"
unicode-segmentation = "1.12.0"

[target.'cfg(windows)'.dependencies]
pancurses = { version = "0.17.0", features = ["win32", "wide"] }

[target.'cfg(unix)'.dependencies]
pancurses = { version = "0.17.0", features = ["wide"] }
