[package]
name = "neocrystal"
version = "1.5.0"
edition = "2024"

[features]
default = ["rpc"]

rpc = ["discord-presence"]
mouse = []
dev = []

[dependencies]
discord-presence = { version = "3.0.0", optional = true }
glob = "0.3.3"
rand = "0.9.2"
rodio = "0.21.1"
audiotags = "0.5.0"
home = "0.5"
unicode-width = "0.2.2"
unicode-segmentation = "1.12.0"
symphonia = "0.5.5"
cpal = "0.17.1"
ringbuf = "0.4.8"


[target.'cfg(windows)'.dependencies]
pancurses = { version = "0.17.0", features = ["win32", "wide"] }

[target.'cfg(unix)'.dependencies]
pancurses = { version = "0.17.0", features = ["wide"] }
zbus = "4"
zvariant = "4"
